Fixed icon spacing in wide black bar; added accessability tags for screen readers

--- a/css/flaticon.css
+++ b/css/flaticon.css
@@ -12,7 +12,7 @@
 [class^="flaticon-"]:before, [class*=" flaticon-"]:before,
 [class^="flaticon-"]:after, [class*=" flaticon-"]:after {   
 	font-family: Flaticon;
-        font-size: 100px;
+        font-size: 110px;
 font-style: normal;
 margin-left: 20px;
 color: white;
