--- a/css/main.css
+++ b/css/main.css
@@ -43,8 +43,13 @@ td {
 
 }
 
+.jumbotron .container h4 {
+	font-style: oblique;
+	font-size: 16px;
+	margin-bottom: 40px;
+}
 .jumbotron .container .big-flat-icons td{	
-	line-height: 1.8;
+	line-height: 1.5;
 }
 
 .jumbotron .container a:hover i:before {
@@ -74,12 +79,6 @@ td {
 	width: 100px;
 }
 
-.discounts hr {
-	border-color: #000000;
-	width: 50%;
-	margin: 0px;
-}
-
 
 
 .discounts .btn {
@@ -95,7 +94,11 @@ td {
   width: 137px;
 }
 
-
+.discounts hr {
+	border-color: #000000;
+	width: 50%;
+	margin: 30px auto 0px auto;
+}
 
 .description {
 	text-align: center;
@@ -113,12 +116,17 @@ body p{
 }
 
 #emphasis{
-	font-size: 24px;
+	font-size: 26px;
 	color: #E62E00;
-	font-family: Impact, Charcoal, sans-serif;
+	font-family: Tahoma, Geneva, sans-serif;
+	font-weight: 800;
 }
 
 .highlight{
+	color: #E62E00;
+}
+
+.highlight a{
 	color: #E62E00;
 }
 
